[tool.poetry]
name = "Dolabella"
version = "0.1.0"
description = ""
authors = ["Lydia <pro.julien.mauroy@gmail.com>"]
readme = "README.md"
packages = [{include = "dolabella"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
img2pdf = "^0.4.4"
wheel = "^0.41.0"


[tool.poetry.scripts]
mangadl = "dolabella.cli:mangadl"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
