[tool.poetry]
name = "Dolabella"
version = "2.0.0"
description = ""
authors = ["Lydia <pro.julien.mauroy@gmail.com>"]
readme = "README.md"
packages = [{include = "dolabella"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
wheel = "^0.41.0"
click = "^8.1.6"
cuid2 = "^2.0.0"
aspreno = "^1.0.0.dev2"


[tool.poetry.scripts]
mangadl = "dolabella.mangadl:newmangadl"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
